[tool.poetry]
name = "sqlalchemy-helpers"
version = "2.0.1"
description = "SQLAlchemy Helpers"

license = "LGPL-3.0-or-later"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = "README.md"
keywords = ["database", "web", "fedora"]
repository = "http://github.com/fedora-infra/sqlalchemy-helpers"
homepage = "http://github.com/fedora-infra/sqlalchemy-helpers"

include = [
    { path = "tox.ini", format = "sdist" },
    { path = "docs/*", format = "sdist" },
    { path = "docs/*/*", format = "sdist" },
    { path = "tests/*", format = "sdist" },
    { path = "tests/*/*", format = "sdist" },
]

exclude = [
    { path = "docs/_build", format = "sdist" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Database",
]

[tool.poetry.dependencies]
python = "^3.10.0"
SQLAlchemy = { version = ">=2.0.0", extras = ["asyncio"] }
alembic = ">=1.6.5"
Flask = { version = "^2.0.0 || ^3.0.0", optional = true }
sphinx = {version = "*", optional = true}
myst-parser = {version = "*", optional = true}
sphinxcontrib-napoleon = {version = "*", optional = true}
fastapi = { version = ">=0.100.0", optional = true }
pydantic = { version = ">=2.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-asyncio = "*"
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
coverage = {extras = ["toml"], version = "*"}
liccheck = "*"
sphinx = "*"
pre-commit = "*"
myst-parser = "*"
towncrier = "*"
aiosqlite = "*"
psycopg2 = "*"
asyncpg = "*"
reuse = "*"
poetry-plugin-export = "^1.8.0"
pydantic-settings = ">=2.0"
mypy = "^1.15.0"

[tool.poetry.extras]
flask = ["Flask"]
fastapi = ["fastapi", "pydantic"]
docs = ["sphinx", "myst-parser", "Flask", "sphinxcontrib-napoleon"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["RUF010", "UP038"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests/integration/*" = ["S603"]
"news/get-authors.py" = ["S602", "S603", "S607"]
"docs/conf.py" = ["I001"]
"sqlalchemy_helpers/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["sqlalchemy_helpers"]

[tool.coverage.paths]
source = ["sqlalchemy_helpers"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "sqlalchemy_helpers/__init__.py",
    "sqlalchemy_helpers/migrations/env.py",
]


[tool.towncrier]
package = "sqlalchemy_helpers"
filename = "docs/release_notes.md"
directory = "news/"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "news/_template.md"
title_format = "## Version [{version}](https://github.com/fedora-infra/sqlalchemy-helpers/tree/v{version})"
issue_format = "{issue}"
wrap = false
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["flask.*", "werkzeug.*"]
follow_untyped_imports = true
